Feat: implemented back end portion for extracting from a pdf file

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,7 @@ httpx==0.28.1
 idna==3.11
 jiter==0.13.0
 psycopg2-binary==2.9.11
+pypdf==6.7.3
 pydantic==2.12.5
 pydantic_core==2.41.5
 PyJWT==2.11.0
